--- a/index.html
+++ b/index.html
@@ -4,10 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kids School</title>
-</head>
-<body>
-   <header>
+    <link rel="stylesheet" href="styles/css.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+</head>
+<body class="quicksand-normal">
+   <header>
+<nav>
+    <div class="logo_align"><img id="logo" src="assets/logo.png" alt="">
+        <h3 class="nav_title">SCHOOL</h3>
+    </div>
+    <ul>
+        <li ><a id="home" href="">Home</a></li>
+        <li ><a id="about" href="">About</a></li>
+        <li ><a id="facilities" href="">Facilities</a></li>
+        <li ><a id="admission" href="">Admission</a></li>
+        <li ><a  href=""><button id="contact">Contact</button></a></li>
+    </ul></nav>
+ <div class="banner">
+<div class="banner_content">
+<h4 class="title">Empowering
+    students from small age towards vision
+</h4>
+<p class="banner_dscription">
+    With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.
+</p>
+<button class="btn_1">Enroll Now</button>
+</div>
+<img class="hero" src="assets/hero-kids.png" alt="">
+ </div>
 
    </header>
    <main>
@@ -16,7 +45,7 @@
    </main> 
    <footer>
 
-    
+
    </footer>
 </body>
 </html>
